OS5-35 Updated user authorization service