@@ -2,18 +2,19 @@ package com.furniture.authentication_service.service;
 
 import com.furniture.authentication_service.dto.*;
 import com.furniture.authentication_service.exception.CustomException;
+import com.furniture.authentication_service.model.Role;
 import com.furniture.authentication_service.model.Token;
 import com.furniture.authentication_service.model.Person;
 import com.furniture.authentication_service.repository.TokenRepository;
 import com.furniture.authentication_service.repository.PersonRepository;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AuthService {
@@ -23,6 +24,8 @@ public class AuthService {
     private final PasswordEncoder passwordEncoder;
     private final NotificationServiceClient notificationServiceClient;
     private final TokenRepository tokenRepository;
+    private static final String USER_NOT_FOUND = "User not found";
+    private static final String APP_LINK = "https://yourapp.com/verify?code=";
 
     public AuthService(PersonRepository personRepository, TokenService tokenService, PasswordEncoder passwordEncoder, NotificationServiceClient notificationServiceClient, TokenRepository tokenRepository) {
         this.personRepository = personRepository;
@@ -32,7 +35,7 @@ public class AuthService {
         this.tokenRepository = tokenRepository;
     }
 
-    public String register(RegisterRequest request) {
+    public void register(RegisterRequest request) {
         if (personRepository.existsByEmail(request.getEmail())) {
             throw new CustomException("Email already registered");
         }
@@ -42,38 +45,60 @@ public class AuthService {
         person.setName(request.getName());
         person.setPhone(request.getPhone());
         person.setEmail(request.getEmail());
+        person.setRole(Role.USER);
         person.setPasswordHash(passwordEncoder.encode(request.getPassword()));
 
         personRepository.save(person);
         String verificationRefreshToken = tokenService.generateRefreshToken(person);
         notificationServiceClient.sendVerificationEmail(person.getEmail(), verificationRefreshToken);
-        return verificationRefreshToken;  // Замінити на відповідь
     }
 
-    public String verifyUser(String verificationRefreshToken) {
-        Token verificationToken = tokenRepository.findByRefreshToken(verificationRefreshToken)
+    public void adminRegister(RegisterRequest request) {
+        List<Person> personList = personRepository.findAllByRole(Role.ADMIN);
+
+        // Check for a registered administrator
+        if (personRepository.existsByEmail(request.getEmail()) || !personList.isEmpty()) {
+            throw new CustomException("Email already registered");
+        }
+        register(request);
+
+        // Assigning a role to an administrator
+        Person admin = personRepository.findByEmail(request.getEmail())
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+        admin.setRole(Role.ADMIN);
+    }
+
+    public void resendVerificationLink(LoginRequest request) {
+        Person person = getPersonByEmail(request.getEmail());
+        String verificationRefreshToken = tokenService.generateRefreshToken(person);
+        notificationServiceClient.sendVerificationEmail(person.getEmail(), verificationRefreshToken);
+    }
+
+    public String verifyUser(String authHeader) {
+        String verificationToken = authHeader.substring(7);
+
+        Token verificationRefreshToken = tokenRepository.findByRefreshToken(verificationToken)
                 .orElseThrow(() -> new CustomException("Invalid verification token"));
 
-        if (verificationToken.getExpiresAt().isBefore(Instant.now())) {
+        if (verificationRefreshToken.getExpiresAt().isBefore(Instant.now())) {
             throw new CustomException("Verification token has expired");
         }
 
-        Person person = verificationToken.getPerson();
+        Person person = verificationRefreshToken.getPerson();
         if (person.isEmailVerified()) {
-            return "User is already verified.";
+            return "Person is already verified.";
         }
 
         person.setEmailVerified(true);
         personRepository.save(person);
 
-        tokenRepository.delete(verificationToken);
+        tokenRepository.delete(verificationRefreshToken);
 
-        return "User verified successfully";
+        return "Person verified successfully";
     }
 
     public TokenResponse login(LoginRequest request) {
-        Person person = personRepository.findByEmail(request.getEmail())
-                .orElseThrow(() -> new CustomException("Invalid credentials"));
+        Person person = getPersonByEmail(request.getEmail());
         //перевірити логін та пароль і тоді перревіряти валідність користувача
         if (!person.isEmailVerified()) {
             throw new CustomException("Email is not verified. Please check your email.");
@@ -92,13 +117,12 @@ public class AuthService {
         return new TokenResponse(accessToken, refreshToken);
     }
 
-    public TokenResponse newTokens(RefreshTokenRequest request) {
-        return tokenService.updateTokens(request.getRefreshToken());
+    public TokenResponse newTokens(String authHeader) {
+        return tokenService.updateTokens(authHeader);
     }
 
     public void processForgotPassword(String personId) {
-        Person person = personRepository.findById(personId)
-                .orElseThrow(() -> new CustomException("User not found"));
+        Person person = getPersonById(personId);
 
         String email = person.getEmail();
         if (email == null || email.isEmpty()) {
@@ -129,8 +153,7 @@ public class AuthService {
     }
 
     public PersonResponse getUserById(String id) {
-        Person person = personRepository.findById(id)
-                .orElseThrow(() -> new CustomException("User not found"));
+        Person person = getPersonById(id);
 
         return new PersonResponse(
                 person.getId(),
@@ -149,12 +172,11 @@ public class AuthService {
                         user.getName(),
                         user.getEmail(),
                         user.getPhone()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void updateEmail(String email, String newEmail) {
-        Person person = personRepository.findByEmail(email)
-                .orElseThrow(() -> new CustomException("User not found"));
+        Person person = getPersonByEmail(email);
 
         if (personRepository.existsByEmail(newEmail)) {
             throw new CustomException("Email already in use");
@@ -162,7 +184,7 @@ public class AuthService {
 
         String verificationEmailToken = tokenService.generateRefreshToken(person);
 
-        // Надсилання листа з верифікацією нового email
+        // Sending a new email verification letter
         notificationServiceClient.sendVerificationEmail(newEmail, verificationEmailToken);
     }
 
@@ -180,8 +202,7 @@ public class AuthService {
     }
 
     public void blockUserById(String id) {
-        Person person = personRepository.findById(id)
-                .orElseThrow(() -> new CustomException("User not found"));
+        Person person = getPersonById(id);
 
         if (person.isBlocked()) {
             throw new CustomException("User is already blocked.");
@@ -193,9 +214,32 @@ public class AuthService {
 
     public void deleteUserById(String id) {
         if (!personRepository.existsById(id)) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found");
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, USER_NOT_FOUND);
         }
         tokenRepository.deleteByPersonId(id);
         personRepository.deleteById(id);
+    }
+
+    private Person getPersonById(String personId) {
+        return personRepository.findById(personId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+    }
+
+    private Person getPersonByEmail(String email) {
+        return personRepository.findByEmail(email)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+    }
+
+    private void checkAdminAccess(TokenRequest request) {
+        String refreshToken = request.getToken();
+        String role = tokenService.getUserRoleFromToken(refreshToken);
+
+        if (!tokenService.validateToken(refreshToken)) {
+            throw new CustomException("Access token is deprecated");
+        }
+
+        if (!role.equalsIgnoreCase("ADMIN")) {
+            throw new CustomException("For admin only");
+        }
     }
 }
